Remove main.xml layout ImageButton onClick attribute

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Call B4U Drink</string>
     <string name="etHint">Enter message here</string>
     <string name="om1">The 12 Steps</string>
-    <string name="om2">About</string>
+    <string name="om2">Meeting</string>
     <string name="show_map">Show Map</string>
     <string name="verse">\"For where two or three gather together
     because they are mine, I am there among them.\" - Matthew 18:20</string>
