Update namespace and strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,13 +8,13 @@
     <string name="button_two">Show Map</string><string name="meeting" >\"For where two or three gather together
     because they are mine, I am there among them.\" - Matthew 18:20
         
-    \n\nCome and join our Meeting:
+    \n\nCome and join our meeting:
     
     \n\nHealing Path Foundation-HP, Inc.
     \n#25 Newport st., cor. Marlboro st., East Fairview, Quezon City
     \nTel. number:  (02) 939-5917
         
-    \n\nEvery Sunday 9:00 - 10:00 am
+    \n\nEvery Sunday 8:45 - 9:45 am
     </string><string-array name="twelve_steps">
                 <item>1. We admitted that we were powerless over our addiction, that
 our lives had become unmanageable.</item>
