--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Call B4U Drink</string>
-    <string name="title_one">The Twelve Steps - Narcotics Anonymous</string><string name="title_two">Location</string><string name="et_hint">Enter message here</string>
+    <string name="app_name">Call B4U Drink</string><string name="et_hint">Enter message here</string>
     <string name="option_one">The 12 Steps</string>
     <string name="option_two">NA Meeting</string>
     <string name="button_one">Call Landline</string>
@@ -11,8 +10,8 @@
     \n\nCome and join our meeting:
     
     \n\nHealing Path Foundation-HP, Inc.
-    \n#25 Newport st., cor. Marlboro st., East Fairview, Quezon City
-    \nTel. number:  (02) 939-5917
+    \n#25 Newport st., cor. Marlboro st., East Fairview, Quezon City, Philippines
+    \nTel. number:  +632 9395917
         
     \n\nEvery Sunday 8:45 - 9:45 am
     </string><string-array name="twelve_steps">
