Add new Home fragment

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,7 @@ these principles in all our affairs.</item>
         <item >Call before you drink</item>
         <item >The Twelve Steps of NA</item>
         <item >Location</item>
+        <item >Home</item>
     </string-array>
     
     
