Fix some of the warnings, move hardcoded main_fragment.xml strings to resource values. Update naming of DBHelper variable and methods.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,6 +53,7 @@ these principles in all our affairs.</item>
             <item >https://justfortoday.pythonanywhere.com/jft/</item>
             <item >https://jftreading.wordpress.com/</item>
         </string-array>
+        <string name="contact_sponsor">Contact sponsor</string>
     
     
     
