Remove NA Pilipinas page; website has expired.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     
     <color name="headfirst">#ff8d8d8d</color><string-array name="page_titles">
         <item>Call before you drink</item>
-        <item>Today\'s reading</item><item>NAWS</item><item>NA Pilipinas</item><item>News</item>
+        <item>Today\'s reading</item><item>NAWS</item><item>News</item>
         
         
         
@@ -14,7 +14,7 @@
     </string-array>
         <string-array name="links">
             <item >https://justfortoday.pythonanywhere.com/jft/</item>
-            <item>http://m.na.org/</item><item>http://www.napilipinas.org/</item><item >https://jftreading.wordpress.com/</item>
+            <item>http://m.na.org/</item><item >https://jftreading.wordpress.com/</item>
             
             
         </string-array>
