--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,8 +13,9 @@
         
     </string-array>
         <string-array name="links">
-            <item >https://justfortoday.pythonanywhere.com/jft/</item>
+            <item>file:///android_asset/www/index.html/</item><item >https://justfortoday.pythonanywhere.com/jft/</item>
             <item>http://m.na.org/</item><item >https://jftreading.wordpress.com/</item>
+            
             
             
         </string-array>
