--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">JFT</string><string name="et_hint">Enter message here</string>
+    <string name="app_name">JFT</string><string name="app_filename">jft-release.apk</string><string name="et_hint">Enter message here</string>
     <string name="contact_sponsor">Contact sponsor</string><string name="share_link">/?share=</string>
     
     
@@ -15,11 +15,14 @@
         <string-array name="links">
             <item>file:///android_asset/www/index.html</item><item >https://justfortoday.pythonanywhere.com/jft/</item>
             <item>http://m.na.org/</item><item >https://jftreading.wordpress.com/</item>
+            <item >https://github.com/jftreading/just_for_today/releases/download/</item><item >https://raw.githubusercontent.com/jftreading/just_for_today/master/AndroidManifest.xml</item>
+            
             
             
             
         </string-array>
         <string name="om1">Clear contact</string>
+        
         
         
     
