--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,22 +4,22 @@
     <string name="contact_sponsor">Contact sponsor</string><string name="share_link">/?share=</string>
     
     
-    <color name="headfirst">#ff8d8d8d</color><string-array name="page_titles">
-        <item>Call before you drink</item>
-        <item>Today\'s reading</item><item>NAWS</item><item>News</item>
-        <item >Recovery</item>
-        
-        
-        
-        
-    </string-array>
-        <string-array name="links"><item >https://justfortoday.pythonanywhere.com/jft/</item>
-            <item>http://m.na.org/</item><item >https://jftreading.wordpress.com/</item>
-            <item >https://github.com/jftreading/just_for_today/releases/download/</item><item >https://raw.githubusercontent.com/jftreading/just_for_today/master/AndroidManifest.xml</item>
-            
-            
-            
-            
+    <color name="headfirst">#ff8d8d8d</color>
+        <string-array name="page_titles">
+            <item>Call before you drink</item>
+            <item>Today\'s reading</item>
+            <item>NAWS</item>
+            <item>NA Pilipinas</item>
+            <item>Home</item>
+            <item >Recovery</item>
+        </string-array>
+        <string-array name="links">
+            <item >https://justfortoday.pythonanywhere.com/jft/</item>
+            <item>http://m.na.org/</item>
+            <item>http://www.napilipinas.org/</item>
+            <item>https://jftreading.wordpress.com/</item>
+            <item >https://github.com/jftreading/just_for_today/releases/download/</item>
+            <item >https://raw.githubusercontent.com/jftreading/just_for_today/master/AndroidManifest.xml</item> 
         </string-array>
         <string-array name="offline_links">
             <item >file:///android_asset/www/index.html</item>
